--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/jnocon/hrla12-mvp#readme",
   "dependencies": {
+    "angular-youtube-embed": "^1.3.1",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongoose": "^4.7.7",
     "morgan": "^1.7.0",
+    "ng-videosharing-embed": "^0.3.6",
+    "ng-youtube-embed": "^0.4.3",
     "nodemon": "^1.11.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1"
